--- a/file-read-api/package.json
+++ b/file-read-api/package.json
@@ -9,6 +9,7 @@
   "author": "Diptam Sarkar, UIUC",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "readline": "^1.3.0"
